parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComments
    TkPunto

Grammar

Rule 0     S' -> block
Rule 1     block -> TkOBlock TkCBlock
Rule 2     block -> TkOBlock declare_variables instruction_block TkCBlock
Rule 3     block -> TkOBlock instruction_block TkCBlock
Rule 4     declare_variables -> TkDeclare TkTwoPoints variable_List
Rule 5     variable_List -> TkId TkComma variable_List
Rule 6     variable_List -> TkId TkTwoPoints type TkComma variable_List
Rule 7     variable_List -> TkId TkTwoPoints type
Rule 8     variable_List -> type TkComma variable_List
Rule 9     variable_List -> type
Rule 10    type -> TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket TkSemicolon
Rule 11    type -> TkInt TkSemicolon
Rule 12    type -> TkBool TkSemicolon
Rule 13    type -> TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket
Rule 14    type -> TkInt
Rule 15    type -> TkBool
Rule 16    instruction_block -> instructions TkSemicolon instruction_block
Rule 17    instruction_block -> instructions
Rule 18    instructions -> assign_inst
Rule 19    instructions -> input_inst
Rule 20    instructions -> output_inst
Rule 21    instructions -> if_guard_inst
Rule 22    instructions -> iteration_for_inst
Rule 23    instructions -> iteration_mult_guard_inst
Rule 24    instructions -> block
Rule 25    assign_inst -> TkId TkAsig expression
Rule 26    array_exp -> TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
Rule 27    array_exp -> TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
Rule 28    array_exp -> TkId TkOBracket expression TkCBracket
Rule 29    array_exp -> TkId TkConcat TkId
Rule 30    array_exp -> array_exp TkConcat TkId
Rule 31    array_exp -> TkId TkConcat array_exp
Rule 32    array_exp -> array_exp TkConcat array_exp
Rule 33    array_exp -> TkOBracket expression TkCBracket
Rule 34    array_exp -> TkAtoi TkOpenPar TkId TkClosePar
Rule 35    array_exp -> TkSize
Rule 36    array_exp -> TkMax
Rule 37    array_exp -> TkMin
Rule 38    expression -> TkOpenPar expression TkPlus expression TkClosePar
Rule 39    expression -> TkOpenPar expression TkMinus expression TkClosePar
Rule 40    expression -> TkOpenPar expression TkMult expression TkClosePar
Rule 41    expression -> TkOpenPar expression TkDiv expression TkClosePar
Rule 42    expression -> TkOpenPar expression TkMod expression TkClosePar
Rule 43    expression -> TkOpenPar expression TkConcat expression TkClosePar
Rule 44    expression -> TkOpenPar expression TkGeq expression TkClosePar
Rule 45    expression -> TkOpenPar expression TkLess expression TkClosePar
Rule 46    expression -> TkOpenPar expression TkGreater expression TkClosePar
Rule 47    expression -> TkOpenPar expression TkNEqual expression TkClosePar
Rule 48    expression -> TkOpenPar expression TkEqual expression TkClosePar
Rule 49    expression -> TkOpenPar expression TkOr expression TkClosePar
Rule 50    expression -> TkOpenPar expression TkAnd expression TkClosePar
Rule 51    expression -> TkOpenPar TkUminus expression TkClosePar
Rule 52    expression -> TkOpenPar TkNot expression TkClosePar
Rule 53    expression -> TkOpenPar array_exp TkClosePar
Rule 54    expression -> TkOpenPar TkId TkClosePar
Rule 55    expression -> TkOpenPar TkNum TkClosePar
Rule 56    expression -> TkOpenPar TkFalse TkClosePar
Rule 57    expression -> TkOpenPar TkTrue TkClosePar
Rule 58    expression -> TkOpenPar TkString TkClosePar
Rule 59    expression -> expression TkPlus expression
Rule 60    expression -> expression TkMinus expression
Rule 61    expression -> expression TkMult expression
Rule 62    expression -> expression TkDiv expression
Rule 63    expression -> expression TkMod expression
Rule 64    expression -> expression TkLeq expression
Rule 65    expression -> expression TkGeq expression
Rule 66    expression -> expression TkLess expression
Rule 67    expression -> expression TkGreater expression
Rule 68    expression -> expression TkNEqual expression
Rule 69    expression -> expression TkEqual expression
Rule 70    expression -> expression TkOr expression
Rule 71    expression -> expression TkAnd expression
Rule 72    expression -> TkUminus expression
Rule 73    expression -> TkNot expression
Rule 74    expression -> array_exp
Rule 75    expression -> TkId
Rule 76    expression -> TkNum
Rule 77    expression -> TkFalse
Rule 78    expression -> TkTrue
Rule 79    expression -> TkString
Rule 80    input_inst -> TkRead TkId
Rule 81    output_inst -> TkPrint expression
Rule 82    output_inst -> TkPrintln expression
Rule 83    if_guard_inst -> TkIf expression TkArrow instructions if_guard_inst TkFi
Rule 84    if_guard_inst -> TkGuard expression TkArrow instructions
Rule 85    guards -> TkGuard expression TkArrow instructions guards
Rule 86    guards -> TkGuard expression TkArrow instructions
Rule 87    iteration_for_inst -> TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
Rule 88    iteration_mult_guard_inst -> TkDo expression TkArrow instructions guards TkOd
Rule 89    iteration_mult_guard_inst -> TkDo expression TkArrow instructions TkOd

Terminals, with rules where they appear

TkAnd                : 50 71
TkArray              : 10 13
TkArrow              : 83 84 85 86 87 88 89
TkAsig               : 25
TkAtoi               : 34
TkBool               : 12 15
TkCBlock             : 1 2 3
TkCBracket           : 10 13 28 33
TkClosePar           : 26 27 34 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
TkComma              : 5 6 8
TkComments           : 
TkConcat             : 29 30 31 32 43
TkDeclare            : 4
TkDiv                : 41 62
TkDo                 : 88 89
TkEqual              : 48 69
TkFalse              : 56 77
TkFi                 : 83
TkFor                : 87
TkGeq                : 44 65
TkGreater            : 46 67
TkGuard              : 84 85 86
TkId                 : 5 6 7 25 26 28 29 29 30 31 34 54 75 80 87
TkIf                 : 83
TkIn                 : 87
TkInt                : 11 14
TkLeq                : 64
TkLess               : 45 66
TkMax                : 36
TkMin                : 37
TkMinus              : 39 60
TkMod                : 42 63
TkMult               : 40 61
TkNEqual             : 47 68
TkNot                : 52 73
TkNum                : 10 10 13 13 55 76
TkOBlock             : 1 2 3
TkOBracket           : 10 13 28 33
TkOd                 : 88 89
TkOpenPar            : 26 27 34 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
TkOr                 : 49 70
TkPlus               : 38 59
TkPrint              : 81
TkPrintln            : 82
TkPunto              : 
TkRead               : 80
TkRof                : 87
TkSemicolon          : 10 11 12 16
TkSize               : 35
TkSoForth            : 10 13
TkString             : 58 79
TkTo                 : 87
TkTrue               : 57 78
TkTwoPoints          : 4 6 7 26 27
TkUminus             : 51 72
error                : 

Nonterminals, with rules where they appear

array_exp            : 26 27 30 31 32 32 53 74
assign_inst          : 18
block                : 24 87 0
declare_variables    : 2
expression           : 25 26 26 27 27 28 33 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 73 81 82 83 84 85 86 87 87 88 89
guards               : 85 88
if_guard_inst        : 21 83
input_inst           : 19
instruction_block    : 2 3 16
instructions         : 16 17 83 84 85 86 88 89
iteration_for_inst   : 22
iteration_mult_guard_inst : 23
output_inst          : 20
type                 : 6 7 8 9
variable_List        : 4 5 6 8

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . TkOBlock TkCBlock
    (2) block -> . TkOBlock declare_variables instruction_block TkCBlock
    (3) block -> . TkOBlock instruction_block TkCBlock

    TkOBlock        shift and go to state 2

    block                          shift and go to state 1

state 1

    (0) S' -> block .



state 2

    (1) block -> TkOBlock . TkCBlock
    (2) block -> TkOBlock . declare_variables instruction_block TkCBlock
    (3) block -> TkOBlock . instruction_block TkCBlock
    (4) declare_variables -> . TkDeclare TkTwoPoints variable_List
    (16) instruction_block -> . instructions TkSemicolon instruction_block
    (17) instruction_block -> . instructions
    (18) instructions -> . assign_inst
    (19) instructions -> . input_inst
    (20) instructions -> . output_inst
    (21) instructions -> . if_guard_inst
    (22) instructions -> . iteration_for_inst
    (23) instructions -> . iteration_mult_guard_inst
    (24) instructions -> . block
    (25) assign_inst -> . TkId TkAsig expression
    (80) input_inst -> . TkRead TkId
    (81) output_inst -> . TkPrint expression
    (82) output_inst -> . TkPrintln expression
    (83) if_guard_inst -> . TkIf expression TkArrow instructions if_guard_inst TkFi
    (84) if_guard_inst -> . TkGuard expression TkArrow instructions
    (87) iteration_for_inst -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
    (88) iteration_mult_guard_inst -> . TkDo expression TkArrow instructions guards TkOd
    (89) iteration_mult_guard_inst -> . TkDo expression TkArrow instructions TkOd
    (1) block -> . TkOBlock TkCBlock
    (2) block -> . TkOBlock declare_variables instruction_block TkCBlock
    (3) block -> . TkOBlock instruction_block TkCBlock

    TkCBlock        shift and go to state 3
    TkDeclare       shift and go to state 6
    TkId            shift and go to state 15
    TkRead          shift and go to state 16
    TkPrint         shift and go to state 17
    TkPrintln       shift and go to state 18
    TkIf            shift and go to state 19
    TkGuard         shift and go to state 20
    TkFor           shift and go to state 21
    TkDo            shift and go to state 22
    TkOBlock        shift and go to state 2

    declare_variables              shift and go to state 4
    instruction_block              shift and go to state 5
    instructions                   shift and go to state 7
    assign_inst                    shift and go to state 8
    input_inst                     shift and go to state 9
    output_inst                    shift and go to state 10
    if_guard_inst                  shift and go to state 11
    iteration_for_inst             shift and go to state 12
    iteration_mult_guard_inst      shift and go to state 13
    block                          shift and go to state 14

state 3

    (1) block -> TkOBlock TkCBlock .

    $end            reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkSemicolon     reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkCBlock        reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkIf            reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkGuard         reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkOd            reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkFi            reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkRof           reduce using rule 1 (block -> TkOBlock TkCBlock .)


state 4

    (2) block -> TkOBlock declare_variables . instruction_block TkCBlock
    (16) instruction_block -> . instructions TkSemicolon instruction_block
    (17) instruction_block -> . instructions
    (18) instructions -> . assign_inst
    (19) instructions -> . input_inst
    (20) instructions -> . output_inst
    (21) instructions -> . if_guard_inst
    (22) instructions -> . iteration_for_inst
    (23) instructions -> . iteration_mult_guard_inst
    (24) instructions -> . block
    (25) assign_inst -> . TkId TkAsig expression
    (80) input_inst -> . TkRead TkId
    (81) output_inst -> . TkPrint expression
    (82) output_inst -> . TkPrintln expression
    (83) if_guard_inst -> . TkIf expression TkArrow instructions if_guard_inst TkFi
    (84) if_guard_inst -> . TkGuard expression TkArrow instructions
    (87) iteration_for_inst -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
    (88) iteration_mult_guard_inst -> . TkDo expression TkArrow instructions guards TkOd
    (89) iteration_mult_guard_inst -> . TkDo expression TkArrow instructions TkOd
    (1) block -> . TkOBlock TkCBlock
    (2) block -> . TkOBlock declare_variables instruction_block TkCBlock
    (3) block -> . TkOBlock instruction_block TkCBlock

    TkId            shift and go to state 15
    TkRead          shift and go to state 16
    TkPrint         shift and go to state 17
    TkPrintln       shift and go to state 18
    TkIf            shift and go to state 19
    TkGuard         shift and go to state 20
    TkFor           shift and go to state 21
    TkDo            shift and go to state 22
    TkOBlock        shift and go to state 2

    instruction_block              shift and go to state 23
    instructions                   shift and go to state 7
    assign_inst                    shift and go to state 8
    input_inst                     shift and go to state 9
    output_inst                    shift and go to state 10
    if_guard_inst                  shift and go to state 11
    iteration_for_inst             shift and go to state 12
    iteration_mult_guard_inst      shift and go to state 13
    block                          shift and go to state 14

state 5

    (3) block -> TkOBlock instruction_block . TkCBlock

    TkCBlock        shift and go to state 24


state 6

    (4) declare_variables -> TkDeclare . TkTwoPoints variable_List

    TkTwoPoints     shift and go to state 25


state 7

    (16) instruction_block -> instructions . TkSemicolon instruction_block
    (17) instruction_block -> instructions .

    TkSemicolon     shift and go to state 26
    TkCBlock        reduce using rule 17 (instruction_block -> instructions .)


state 8

    (18) instructions -> assign_inst .

    TkSemicolon     reduce using rule 18 (instructions -> assign_inst .)
    TkCBlock        reduce using rule 18 (instructions -> assign_inst .)
    TkIf            reduce using rule 18 (instructions -> assign_inst .)
    TkGuard         reduce using rule 18 (instructions -> assign_inst .)
    TkOd            reduce using rule 18 (instructions -> assign_inst .)
    TkFi            reduce using rule 18 (instructions -> assign_inst .)


state 9

    (19) instructions -> input_inst .

    TkSemicolon     reduce using rule 19 (instructions -> input_inst .)
    TkCBlock        reduce using rule 19 (instructions -> input_inst .)
    TkIf            reduce using rule 19 (instructions -> input_inst .)
    TkGuard         reduce using rule 19 (instructions -> input_inst .)
    TkOd            reduce using rule 19 (instructions -> input_inst .)
    TkFi            reduce using rule 19 (instructions -> input_inst .)


state 10

    (20) instructions -> output_inst .

    TkSemicolon     reduce using rule 20 (instructions -> output_inst .)
    TkCBlock        reduce using rule 20 (instructions -> output_inst .)
    TkIf            reduce using rule 20 (instructions -> output_inst .)
    TkGuard         reduce using rule 20 (instructions -> output_inst .)
    TkOd            reduce using rule 20 (instructions -> output_inst .)
    TkFi            reduce using rule 20 (instructions -> output_inst .)


state 11

    (21) instructions -> if_guard_inst .

    TkSemicolon     reduce using rule 21 (instructions -> if_guard_inst .)
    TkCBlock        reduce using rule 21 (instructions -> if_guard_inst .)
    TkIf            reduce using rule 21 (instructions -> if_guard_inst .)
    TkGuard         reduce using rule 21 (instructions -> if_guard_inst .)
    TkOd            reduce using rule 21 (instructions -> if_guard_inst .)
    TkFi            reduce using rule 21 (instructions -> if_guard_inst .)


state 12

    (22) instructions -> iteration_for_inst .

    TkSemicolon     reduce using rule 22 (instructions -> iteration_for_inst .)
    TkCBlock        reduce using rule 22 (instructions -> iteration_for_inst .)
    TkIf            reduce using rule 22 (instructions -> iteration_for_inst .)
    TkGuard         reduce using rule 22 (instructions -> iteration_for_inst .)
    TkOd            reduce using rule 22 (instructions -> iteration_for_inst .)
    TkFi            reduce using rule 22 (instructions -> iteration_for_inst .)


state 13

    (23) instructions -> iteration_mult_guard_inst .

    TkSemicolon     reduce using rule 23 (instructions -> iteration_mult_guard_inst .)
    TkCBlock        reduce using rule 23 (instructions -> iteration_mult_guard_inst .)
    TkIf            reduce using rule 23 (instructions -> iteration_mult_guard_inst .)
    TkGuard         reduce using rule 23 (instructions -> iteration_mult_guard_inst .)
    TkOd            reduce using rule 23 (instructions -> iteration_mult_guard_inst .)
    TkFi            reduce using rule 23 (instructions -> iteration_mult_guard_inst .)


state 14

    (24) instructions -> block .

    TkSemicolon     reduce using rule 24 (instructions -> block .)
    TkCBlock        reduce using rule 24 (instructions -> block .)
    TkIf            reduce using rule 24 (instructions -> block .)
    TkGuard         reduce using rule 24 (instructions -> block .)
    TkOd            reduce using rule 24 (instructions -> block .)
    TkFi            reduce using rule 24 (instructions -> block .)


state 15

    (25) assign_inst -> TkId . TkAsig expression

    TkAsig          shift and go to state 27


state 16

    (80) input_inst -> TkRead . TkId

    TkId            shift and go to state 28


state 17

    (81) output_inst -> TkPrint . expression
    (38) expression -> . TkOpenPar expression TkPlus expression TkClosePar
    (39) expression -> . TkOpenPar expression TkMinus expression TkClosePar
    (40) expression -> . TkOpenPar expression TkMult expression TkClosePar
    (41) expression -> . TkOpenPar expression TkDiv expression TkClosePar
    (42) expression -> . TkOpenPar expression TkMod expression TkClosePar
    (43) expression -> . TkOpenPar expression TkConcat expression TkClosePar
    (44) expression -> . TkOpenPar expression TkGeq expression TkClosePar
    (45) expression -> . TkOpenPar expression TkLess expression TkClosePar
    (46) expression -> . TkOpenPar expression TkGreater expression TkClosePar
    (47) expression -> . TkOpenPar expression TkNEqual expression TkClosePar
    (48) expression -> . TkOpenPar expression TkEqual expression TkClosePar
    (49) expression -> . TkOpenPar expression TkOr expression TkClosePar
    (50) expression -> . TkOpenPar expression TkAnd expression TkClosePar
    (51) expression -> . TkOpenPar TkUminus expression TkClosePar
    (52) expression -> . TkOpenPar TkNot expression TkClosePar
    (53) expression -> . TkOpenPar array_exp TkClosePar
    (54) expression -> . TkOpenPar TkId TkClosePar
    (55) expression -> . TkOpenPar TkNum TkClosePar
    (56) expression -> . TkOpenPar TkFalse TkClosePar
    (57) expression -> . TkOpenPar TkTrue TkClosePar
    (58) expression -> . TkOpenPar TkString TkClosePar
    (59) expression -> . expression TkPlus expression
    (60) expression -> . expression TkMinus expression
    (61) expression -> . expression TkMult expression
    (62) expression -> . expression TkDiv expression
    (63) expression -> . expression TkMod expression
    (64) expression -> . expression TkLeq expression
    (65) expression -> . expression TkGeq expression
    (66) expression -> . expression TkLess expression
    (67) expression -> . expression TkGreater expression
    (68) expression -> . expression TkNEqual expression
    (69) expression -> . expression TkEqual expression
    (70) expression -> . expression TkOr expression
    (71) expression -> . expression TkAnd expression
    (72) expression -> . TkUminus expression
    (73) expression -> . TkNot expression
    (74) expression -> . array_exp
    (75) expression -> . TkId
    (76) expression -> . TkNum
    (77) expression -> . TkFalse
    (78) expression -> . TkTrue
    (79) expression -> . TkString
    (26) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
    (27) array_exp -> . TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
    (28) array_exp -> . TkId TkOBracket expression TkCBracket
    (29) array_exp -> . TkId TkConcat TkId
    (30) array_exp -> . array_exp TkConcat TkId
    (31) array_exp -> . TkId TkConcat array_exp
    (32) array_exp -> . array_exp TkConcat array_exp
    (33) array_exp -> . TkOBracket expression TkCBracket
    (34) array_exp -> . TkAtoi TkOpenPar TkId TkClosePar
    (35) array_exp -> . TkSize
    (36) array_exp -> . TkMax
    (37) array_exp -> . TkMin

    TkOpenPar       shift and go to state 30
    TkUminus        shift and go to state 31
    TkNot           shift and go to state 32
    TkId            shift and go to state 34
    TkNum           shift and go to state 35
    TkFalse         shift and go to state 36
    TkTrue          shift and go to state 37
    TkString        shift and go to state 38
    TkOBracket      shift and go to state 39
    TkAtoi          shift and go to state 40
    TkSize          shift and go to state 41
    TkMax           shift and go to state 42
    TkMin           shift and go to state 43

    expression                     shift and go to state 29
    array_exp                      shift and go to state 33

state 18

    (82) output_inst -> TkPrintln . expression
    (38) expression -> . TkOpenPar expression TkPlus expression TkClosePar
    (39) expression -> . TkOpenPar expression TkMinus expression TkClosePar
    (40) expression -> . TkOpenPar expression TkMult expression TkClosePar
    (41) expression -> . TkOpenPar expression TkDiv expression TkClosePar
    (42) expression -> . TkOpenPar expression TkMod expression TkClosePar
    (43) expression -> . TkOpenPar expression TkConcat expression TkClosePar
    (44) expression -> . TkOpenPar expression TkGeq expression TkClosePar
    (45) expression -> . TkOpenPar expression TkLess expression TkClosePar
    (46) expression -> . TkOpenPar expression TkGreater expression TkClosePar
    (47) expression -> . TkOpenPar expression TkNEqual expression TkClosePar
    (48) expression -> . TkOpenPar expression TkEqual expression TkClosePar
    (49) expression -> . TkOpenPar expression TkOr expression TkClosePar
    (50) expression -> . TkOpenPar expression TkAnd expression TkClosePar
    (51) expression -> . TkOpenPar TkUminus expression TkClosePar
    (52) expression -> . TkOpenPar TkNot expression TkClosePar
    (53) expression -> . TkOpenPar array_exp TkClosePar
    (54) expression -> . TkOpenPar TkId TkClosePar
    (55) expression -> . TkOpenPar TkNum TkClosePar
    (56) expression -> . TkOpenPar TkFalse TkClosePar
    (57) expression -> . TkOpenPar TkTrue TkClosePar
    (58) expression -> . TkOpenPar TkString TkClosePar
    (59) expression -> . expression TkPlus expression
    (60) expression -> . expression TkMinus expression
    (61) expression -> . expression TkMult expression
    (62) expression -> . expression TkDiv expression
    (63) expression -> . expression TkMod expression
    (64) expression -> . expression TkLeq expression
    (65) expression -> . expression TkGeq expression
    (66) expression -> . expression TkLess expression
    (67) expression -> . expression TkGreater expression
    (68) expression -> . expression TkNEqual expression
    (69) expression -> . expression TkEqual expression
    (70) expression -> . expression TkOr expression
    (71) expression -> . expression TkAnd expression
    (72) expression -> . TkUminus expression
    (73) expression -> . TkNot expression
    (74) expression -> . array_exp
    (75) expression -> . TkId
    (76) expression -> . TkNum
    (77) expression -> . TkFalse
    (78) expression -> . TkTrue
    (79) expression -> . TkString
    (26) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
    (27) array_exp -> . TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
    (28) array_exp -> . TkId TkOBracket expression TkCBracket
    (29) array_exp -> . TkId TkConcat TkId
    (30) array_exp -> . array_exp TkConcat TkId
    (31) array_exp -> . TkId TkConcat array_exp
    (32) array_exp -> . array_exp TkConcat array_exp
    (33) array_exp -> . TkOBracket expression TkCBracket
    (34) array_exp -> . TkAtoi TkOpenPar TkId TkClosePar
    (35) array_exp -> . TkSize
    (36) array_exp -> . TkMax
    (37) array_exp -> . TkMin
